# uncommitted

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE
docs/: TODO.md
src/: git.rs  git_rewrite.rs  lib.rs  main.rs  report.rs  scan.rs  system.rs  types.rs
src/git/: metrics.rs  mod.rs  refs.rs  runner.rs
src/git_rewrite/: config.rs  error.rs  executor.rs  mod.rs  tests.rs  time.rs  tracking.rs  worker.rs
src/git_rewrite/config/: mod.rs  pairing.rs  parse.rs  types.rs
src/git_rewrite/tests/: entries.rs  mod.rs  scenarios.rs  support.rs  untracked.rs
src/output/: json.rs  mod.rs  tab.rs
src/output/tab/: git_rewrite.rs  mod.rs  other.rs  pushable.rs  staged.rs  style.rs  uncommitted.rs  untracked.rs
src/report/: collector.rs  format.rs  humanize.rs  mod.rs  repository.rs
tests/: test01_integration.rs
