[package]
name = "uncommitted"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tabled = "0"
walkdir = "2"
toml = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", default-features = false, features = ["clock"] }
num_cpus = "1"
rayon = "1"
indicatif = "0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
